chore: format with prettier

--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "fieldrunner",
   "private": true,
-  "workspaces": ["apps/*", "packages/*"],
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
