--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -22,7 +22,8 @@
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate"
+    "db:migrate": "drizzle-kit migrate",
+    "db:reset": "bun run scripts/db-reset.ts"
   },
   "dependencies": {
     "@clerk/backend": "^2.31.0",
@@ -48,6 +49,7 @@
     "pino-http": "^11.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "svix": "^1.85.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
