--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -11,5 +11,6 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true
-  }
+  },
+  "exclude": ["scripts"]
 }
